--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@ body{
   background-color: aliceblue;
 }
 
+.top-section{
+  display: flex;
+  align-items: center;
+}
+
+.new-book{
+  margin-left: 12px;
+  border:none;
+  background-color: black;
+  color:white;
+  width: 100px;
+  height: 40px;
+  font-weight: 800;
+  font-family: inherit;
+  cursor: pointer;
+}
+
 .card{
   background-color: white;
   width:200px;
