--- a/style.css
+++ b/style.css
@@ -8,21 +8,22 @@
   src: url(fonts/GeistMonoVF.woff2);
 }
 
-body{
-  font-family: 'geist-mono',sans-serif;
+body {
+  font-family: "geist-mono", sans-serif;
   background-color: aliceblue;
 }
 
-.top-section{
+.top-section {
   display: flex;
   align-items: center;
 }
 
-.new-book{
+.new-book,
+.black-button {
   margin-left: 12px;
-  border:none;
+  border: none;
   background-color: black;
-  color:white;
+  color: white;
   width: 100px;
   height: 40px;
   font-weight: 800;
@@ -30,9 +31,9 @@ body{
   cursor: pointer;
 }
 
-.card{
+.card {
   background-color: white;
-  width:200px;
+  width: 200px;
   height: 100px;
   border: 2px solid rgb(0, 0, 0);
   box-shadow: 0px 0px 5px grey;
@@ -40,5 +41,20 @@ body{
   padding: 12px;
   display: flex;
   flex-direction: column;
+}
+
+.new-book-dialog {
+  max-width: 200px;
+  > form > button {
   }
-  
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  > :first-of-type {
+    margin-left: 0;
+  }
+  > button {
+    margin-top: 20px;
+  }
+}
